# async-discord

./: Cargo.toml  README.md
examples/: collector-example.rs.rs  local-context.rs  middleware.rs  simple-gateway.rs  simple-ping-pong.rs
src/: cache.rs  client.rs  error.rs  event.rs  lib.rs  utils.rs
src/gateway/: connection.rs  event.rs  mod.rs  session.rs  session_state.rs  shard_processor.rs
src/http/: get_gateway.rs  mod.rs
src/http/channel/: create_message.rs
src/interceptors/: mod.rs
src/middleware/: cache.rs  context.rs  mod.rs  prefix.rs
