[package]
name = "async-discord"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
async-tungstenite = { version = "0.4.0", features = ["async-std-runtime", "async-native-tls"]}
surf = "2.0.0-alpha.2"
serde = "1.0.106"
serde_json = "1.0.52"
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", features = ["serde-support"], rev = "c6408da8edd79bdf0e7d3cfdcd22921f39c2bc00" }
log = "0.4.8"
async-trait = "0.1.30"
async-native-tls = "0.3.0"
flate2 = { version = "1.0.14", default-features = false, features = ["zlib"] }
http-client = "2.0.0"
typemap = "0.3.3"

[dev-dependencies]
pretty_env_logger = "0.3"
